fixed extra space

--- a/sklearn/utils/_repr_html/features.css
+++ b/sklearn/utils/_repr_html/features.css
@@ -116,4 +116,5 @@
 .total_features {
   display: flex;
   justify-content: center;
+  margin-top: 0.5em;
 }
